--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
   },
   "homepage": "https://github.com/opentripplanner/otp-react-redux#readme",
   "dependencies": {
-    "@opentripplanner/base-map": "^1.0.1",
-    "@opentripplanner/core-utils": "^1.2.1",
-    "@opentripplanner/endpoints-overlay": "^1.0.1",
-    "@opentripplanner/from-to-location-picker": "^1.0.1",
-    "@opentripplanner/geocoder": "^1.0.2",
-    "@opentripplanner/humanize-distance": "^0.0.22",
-    "@opentripplanner/icons": "^1.0.1",
-    "@opentripplanner/itinerary-body": "^1.2.0",
-    "@opentripplanner/location-field": "^1.0.2",
-    "@opentripplanner/location-icon": "^1.0.0",
-    "@opentripplanner/park-and-ride-overlay": "^1.0.1",
-    "@opentripplanner/printable-itinerary": "^1.0.0",
-    "@opentripplanner/route-viewer-overlay": "^1.0.1",
-    "@opentripplanner/stop-viewer-overlay": "^1.0.1",
-    "@opentripplanner/stops-overlay": "^1.0.1",
-    "@opentripplanner/transitive-overlay": "^1.0.2",
-    "@opentripplanner/trip-details": "^1.1.1",
-    "@opentripplanner/trip-form": "^1.0.2",
-    "@opentripplanner/trip-viewer-overlay": "^1.0.1",
-    "@opentripplanner/vehicle-rental-overlay": "^1.0.1",
+    "@opentripplanner/base-map": "file:../otp-ui/packages/base-map",
+    "@opentripplanner/core-utils": "file:../otp-ui/packages/core-utils",
+    "@opentripplanner/endpoints-overlay": "file:../otp-ui/packages/endpoints-overlay",
+    "@opentripplanner/from-to-location-picker": "file:../otp-ui/packages/from-to-location-picker",
+    "@opentripplanner/geocoder": "file:../otp-ui/packages/geocoder",
+    "@opentripplanner/humanize-distance": "file:../otp-ui/packages/humanize-distance",
+    "@opentripplanner/icons": "file:../otp-ui/packages/icons",
+    "@opentripplanner/itinerary-body": "file:../otp-ui/packages/itinerary-body",
+    "@opentripplanner/location-field": "file:../otp-ui/packages/location-field",
+    "@opentripplanner/location-icon": "file:../otp-ui/packages/location-icon",
+    "@opentripplanner/park-and-ride-overlay": "file:../otp-ui/packages/park-and-ride-overlay",
+    "@opentripplanner/printable-itinerary": "file:../otp-ui/packages/printable-itinerary",
+    "@opentripplanner/route-viewer-overlay": "file:../otp-ui/packages/route-viewer-overlay",
+    "@opentripplanner/stop-viewer-overlay": "file:../otp-ui/packages/stop-viewer-overlay",
+    "@opentripplanner/stops-overlay": "file:../otp-ui/packages/stops-overlay",
+    "@opentripplanner/transitive-overlay": "file:../otp-ui/packages/transitive-overlay",
+    "@opentripplanner/trip-details": "file:../otp-ui/packages/trip-details",
+    "@opentripplanner/trip-form": "file:../otp-ui/packages/trip-form",
+    "@opentripplanner/trip-viewer-overlay": "file:../otp-ui/packages/trip-viewer-overlay",
+    "@opentripplanner/vehicle-rental-overlay": "file:../otp-ui/packages/vehicle-rental-overlay",
     "bootstrap": "^3.3.7",
     "bowser": "^1.9.3",
     "clone": "^2.1.0",
