--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otp-react-redux",
-  "version": "mentor-0.1",
+  "version": "0.0.1",
   "description": "A library for writing modern OpenTripPlanner-compatible multimodal journey planning web applications using React and Redux",
   "main": "build/index.js",
   "scripts": {
